--- a/styles/main.css
+++ b/styles/main.css
@@ -402,7 +402,7 @@ body {
 
 .audio-icon {
   background-color: rgba(161, 66, 244, 0.15);
-  color: #4a148c;
+  color: #6200ea;
 }
 
 .landing-card h3 {
